<resources>
    <string name="app_name">HopperRestaurant</string>
    <string name="name">Name</string>
    <string name="schedules">Schedules</string>
    <string name="employees">Employees</string>
    <string name="closing">Closing</string>
    <string name="opening">Opening</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit_employee">EDIT EMPLOYEE</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="nick_name">Nickname</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="can_open">Can Open</string>
    <string name="can_close">Can Close</string>
    <string name="In_training">In training</string>
    <string name="save_changes">Save Changes</string>
    <string name="add_employee">ADD EMPLOYEE</string>
    <string name="add">ADD</string>
    <string name="add_new_employee">Add New Employee</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="required_field">* Required field</string>
    <string name="asterisk">*</string>
    <string name="mon">Mon</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="sun">Sun</string>
    <string name="thur">Thur</string>
    <string name="wed">Wed</string>
    <string name="tue">Tue</string>
    <string name="deactivate">Deactivate</string>
    <string-array name="avail_array">
        <item>None</item>
        <item>AM</item>
        <item>PM</item>
        <item>Full</item>
    </string-array>
    <string-array name="weekend_avail_array">
        <item>None</item>
        <item>Full</item>
    </string-array>
</resources>

